Fix issue "Tall images dominate the side panel" - Fix some broken paths for loaded(ImageMap, GeomMap), & viewport - Improve vertical align for setting toggle icon
closes #4

--- a/src/styles.css
+++ b/src/styles.css
@@ -49,11 +49,6 @@ body{
 	height: auto !important;
 	min-height: 100%;
 }
-.dataCanvas{
-	display: block;
-	width: 100%;
-	border: 1px solid rgba(0, 0, 0, 0.125);
-}
 .viewport{
 	display: block;
 	width: 100%;
@@ -67,6 +62,39 @@ body{
 	padding: 1.5rem;
 	z-index: 2;
 }
+.icon.fa{
+	display: block;
+	height: 2rem;
+	width: 2rem;
+	line-height: 1.725rem;
+	text-align: center;
+	font-size: 1.5rem;
+	border: 2px solid #999;
+	border-radius: 0.5rem;
+}
+.icon.fa:before{
+	display: inline-block;
+	vertical-align: super;
+	color: #999;
+}
+
+.settings .dataCanvasHolder{
+	position: relative;
+	padding-bottom: 100%;
+}
+.dataCanvas{
+	position: absolute;
+	display: block;
+	height: auto;
+	margin: auto;
+	max-width: 100%;
+	max-height: 100%;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	border: 1px solid rgba(0, 0, 0, 0.125);
+}
 
 .settings .btn{
 	border: 1px solid rgba(0, 0, 0, 0.125);
@@ -76,23 +104,6 @@ body{
 	display: inline-block;
 	width: 1rem;
 	text-align: left;
-}
-
-.icon{
-	display: inline-block;
-	height: 2rem;
-	width: 2rem;
-	line-height: 2rem;
-	text-align: center;
-	font-size: 1.5rem;
-	border: 2px solid #999;
-	border-radius: 0.5rem;
-}
-.icon.fa:before{
-	display: block;
-	line-height: 1.75rem;
-	vertical-align: top;
-	color: #999;
 }
 
 .settingsToggle,
